--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MapsAI - NVIDIA Powered Navigation Assistant</title>
     <link rel="stylesheet" href="/static/style.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCT2iwevjT2lkPtBocCLOw6W-hNsgb4fdE&libraries=geometry"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_MAPS_API_KEY}}&libraries=geometry"></script>
 </head>
 <body>
     <div class="container">
